CSS bugfixes
* remove horizontal scroll
* move close button
* less opacity for overlay

--- a/Resources/Public/Backend/style.css
+++ b/Resources/Public/Backend/style.css
@@ -39,13 +39,13 @@
 
 .tx_pagequickadd_popup__close{
 	position:absolute;
-	right:0;
+	right:15px;
 	font-size: 25px;
 	text-decoration: none;
 	font-weight: bold;
 	display: inline-block;
 	padding: 8px 7px;
-	opacity: 0.7;
+	opacity: 0.6;
 	transition: opacity 0.25s ease;
 	cursor:pointer;
 }
@@ -63,7 +63,8 @@
 	justify-content:flex-start;
 	flex-direction:column;
 
-    overflow: auto;
+    overflow-x:hidden;
+    overflow-y: auto;
 }
 
 
